<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.apicurio</groupId>
    <artifactId>apicurio-keycloak-extensions</artifactId>
    <version>6.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>apicurio-keycloak-extensions</name>

    <url>http://www.apicur.io/</url>
    <description>Open Source API Design Studio</description>

    <organization>
        <name>JBoss, a division of Red Hat</name>
        <url>http://www.jboss.org</url>
    </organization>

    <licenses>
        <license>
            <name>Apache License Version 2.0</name>
            <url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/Apicurio/apicurio-keycloak-extensions/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:git@github.com:apicurio/apicurio-keycloak-extensions.git</connection>
        <developerConnection>scm:git:git@github.com:apicurio/apicurio-keycloak-extensions.git</developerConnection>
        <url>scm:git:git@github.com:apicurio/apicurio-keycloak-extensions.git</url>
    </scm>

    <developers>
        <developer>
            <name>Eric Wittmann</name>
            <id>EricWittmann</id>
            <email>eric.wittmann@redhat.com</email>
            <organization>Red Hat</organization>
            <roles>
                <role>Project Lead</role>
                <role>Developer</role>
            </roles>
            <timezone>-5</timezone>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
        <timestamp>${maven.build.timestamp}</timestamp>

        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>

        <!-- Keycloak Version -->
        <version.wildfly>4.8.3.Final</version.wildfly>

        <!-- Plugin Versions -->
        <version.antrun.plugin>1.8</version.antrun.plugin>
        <version.assembly.plugin>3.1.1</version.assembly.plugin>
        <version.buildnumber.plugin>1.4</version.buildnumber.plugin>
        <version.clean.plugin>3.1.0</version.clean.plugin>
        <version.compiler.plugin>3.8.0</version.compiler.plugin>
        <version.dependency.plugin>3.1.1</version.dependency.plugin>
        <version.deploy.plugin>2.8.2</version.deploy.plugin>
        <version.enforcer.plugin>1.4.1</version.enforcer.plugin>
        <version.gatling.plugin>3.0.2</version.gatling.plugin>
        <version.install.plugin>2.5.2</version.install.plugin>
        <version.jar.plugin>3.1.1</version.jar.plugin>
        <version.javadoc.plugin>2.10.4</version.javadoc.plugin>
        <version.maven-gpg-plugin.plugin>1.6</version.maven-gpg-plugin.plugin>
        <version.nexus-staging-maven-plugin.plugin>1.6.8</version.nexus-staging-maven-plugin.plugin>
        <version.resources.plugin>3.1.0</version.resources.plugin>
        <version.source.plugin>2.4</version.source.plugin>
        <version.surefire.plugin>2.22.1</version.surefire.plugin>
        <version.surefire-report.plugin>2.22.1</version.surefire-report.plugin>
        <version.war.plugin>3.2.2</version.war.plugin>
        <version.frontend-maven.plugin>1.7.5</version.frontend-maven.plugin>
        <version.scala-maven.plugin>4.0.1</version.scala-maven.plugin>

        <!-- Dependency Versions -->
        <version.org.keycloak>7.0.1</version.org.keycloak>
        <version.com.fasterxml.jackson.core>2.9.8</version.com.fasterxml.jackson.core>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-server-spi</artifactId>
                <version>${version.org.keycloak}</version>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-server-spi-private</artifactId>
                <version>${version.org.keycloak}</version>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-services</artifactId>
                <version>${version.org.keycloak}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${version.com.fasterxml.jackson.core}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${version.com.fasterxml.jackson.core}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${version.enforcer.plugin}</version>
                    <dependencies>
                        <dependency>
                            <groupId>de.is24.maven.enforcer.rules</groupId>
                            <artifactId>illegal-transitive-dependency-check</artifactId>
                            <version>1.7.4</version>
                            <exclusions>
                                <exclusion>
                                    <groupId>org.ow2.asm</groupId>
                                    <artifactId>asm-analysis</artifactId>
                                </exclusion>
                            </exclusions>
                        </dependency>
                        <dependency>
                            <groupId>org.ow2.asm</groupId>
                            <artifactId>asm-analysis</artifactId>
                            <version>6.2.1</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <id>enforcer-transitives-check</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <phase>process-classes</phase>
                            <configuration>
                                <fail>true</fail>
                                <rules>
                                    <illegalTransitiveDependencyCheck
                                        implementation="de.is24.maven.enforcer.rules.IllegalTransitiveDependencyCheck">
                                        <reportOnly>false</reportOnly>
                                        <regexIgnoredClasses>
                                            <regexIgnoredClass>javax\..+</regexIgnoredClass>
                                            <regexIgnoredClass>org.w3c.dom\..+</regexIgnoredClass>
                                        </regexIgnoredClasses>
                                        <useClassesFromLastBuild>true</useClassesFromLastBuild>
                                    </illegalTransitiveDependencyCheck>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>${version.antrun.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${version.assembly.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>${version.buildnumber.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${version.clean.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${version.compiler.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${version.dependency.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${version.deploy.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>${version.install.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${version.jar.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${version.javadoc.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${version.resources.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${version.source.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${version.war.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${version.surefire.plugin}</version>
                    <configuration>
                        <systemProperties>
                            <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
                        </systemProperties>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-report-plugin</artifactId>
                    <version>${version.surefire-report.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.sonatype.plugins</groupId>
                    <artifactId>nexus-staging-maven-plugin</artifactId>
                    <version>${version.nexus-staging-maven-plugin.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>${version.maven-gpg-plugin.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>io.gatling</groupId>
                    <artifactId>gatling-maven-plugin</artifactId>
                    <version>${version.gatling.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>${version.scala-maven.plugin}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>
            <!-- Include the maven-compiler-plugin settings here so that Eclipse/m2e will properly import the projects. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.target}</source>
                    <target>${maven.compiler.target}</target>
                    <showDeprecation>false</showDeprecation>
                    <showWarnings>false</showWarnings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <additionalDependencies>
                        <additionalDependency>
                            <groupId>org.jboss.spec.javax.annotation</groupId>
                            <artifactId>jboss-annotations-api_1.2_spec</artifactId>
                            <version>1.0.1.Final</version>
                        </additionalDependency>
                    </additionalDependencies>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*TestCase.java</include>
                        <include>**/*Test.java</include>
                    </includes>
                    <systemProperties>
                        <property>
                            <name>java.io.tmpdir</name>
                            <value>${basedir}/target</value>
                        </property>
                    </systemProperties>
                    <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${version.surefire-report.plugin}</version>
            </plugin>
        </plugins>
    </reporting>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <modules>
        <module>social</module>
    </modules>

    <profiles>
        <profile>
            <id>java8</id>
            <activation>
                <jdk>[1.8,)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <configuration>
                            <additionalparam>-Xdoclint:none</additionalparam>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
